cats/kapp/resources-dev.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")
#@ load("helpers.star","configfile","load_configfile")
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: cats-app  
  labels:
    app: cats-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: cats-app
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: #@ configfile("cats-config", "service_config.properties")
            items:
            - key: service_config.properties
              path: config.properties
      containers:
        - name: cats          
          image: #@ data.values.registry.server + "/micropet-cats:" +data.values.service.version
          imagePullPolicy: Always
          ports:
            - name: cats
              containerPort: #@ data.values.service.port
          livenessProbe:
            httpGet:
              port: #@ data.values.service.port
              path: /cats/liveness
            initialDelaySeconds: 5
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: #@ data.values.service.port
              path: /cats/readiness
            initialDelaySeconds: 5
            periodSeconds: 2
          volumeMounts:
            - name: config-volume
              mountPath: /config/
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: cats-service
  labels:
    app: cats-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: http-cats
      port: #@ data.values.service.port
  selector:
    app: cats-app
    group: micro-pet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: cats-ingress
spec:
  rules:
    - host: k8s.mytanzu.xyz
      http:
        paths:
          - path: /cats
            backend:
              serviceName: cats-service
              servicePort: #@ data.values.service.port
